@startuml

entity RSSFeed {
    * id : number <<generated>> PK
    --
    * name : text
}
note left
    There's an entity for storing an RSS feed.
end note
note right of RSSFeed::name
    There's the name of an RSS feed.
end note

entity Store {
    * id : number <<generated>> PK
    --
    * name : text
}

entity Order {
    * id : number <<generated>> PK
    --
    * store_id : number FK
    * created_at : date
}

entity OrderPosition {
    * id : number <<generated>> PK
    --
    * order_id : number FK
    * rssfeed_id : number FK
}

Store ||--o{ Order
Order ||--o{ OrderPosition
OrderPosition ||--|| RSSFeed

@enduml